--- a/proverb.html
+++ b/proverb.html
@@ -29,7 +29,7 @@
         }
 
         .container {
-            width: 95%; max-width: 550px; /* 한 줄 표시를 위해 가로폭을 약간 넓힘 */
+            width: 95%; max-width: 550px; 
             background: var(--container-bg);
             border-radius: 40px; padding: 30px 20px; text-align: center;
             box-shadow: 0 15px 35px rgba(0,0,0,0.15); position: relative;
@@ -67,36 +67,33 @@
 
         .quiz-content { 
             font-size: 1.8rem; font-weight: 800; color: var(--accent-blue); 
-            margin: 20px 0; min-height: 60px; word-break: keep-all; 
+            margin-top: 20px; margin-bottom: 5px;
+            min-height: 50px; word-break: keep-all; 
         }
 
-        .input-row { display: flex; gap: 10px; margin-bottom: 15px; }
+        #status-msg { 
+            min-height: 40px; font-weight: 800; margin-bottom: 15px; 
+            font-size: 1.2rem; 
+            display: flex; align-items: center; justify-content: center;
+            white-space: nowrap; 
+            overflow: hidden;
+        }
+        .msg-correct { color: var(--green); font-size: 1.6rem; }
+        .msg-wrong { color: #333; } 
+        .answer-highlight { color: var(--red); font-size: 1.6rem; font-weight: 900; margin: 0 5px; }
+
+        .input-row { display: flex; gap: 10px; margin-bottom: 0px; }
         .input-box {
             flex: 1; padding: 15px; font-size: 1.3rem; border: 2px solid var(--light-mint);
             border-radius: 15px; background: var(--light-mint); outline: none; text-align: center;
             font-weight: 800; color: var(--accent-blue);
         }
-        .btn-confirm { width: 70px; background: var(--yellow); border-radius: 15px; font-weight: bold; border: none; cursor: pointer; }
-
-        #status-msg { 
-            min-height: 80px; font-weight: 800; margin-bottom: 20px; 
-            font-size: 1.1rem; 
-            display: flex; align-items: center; justify-content: center;
-            white-space: nowrap; /* 텍스트를 한 줄로 강제 고정 */
-            overflow: hidden;
-        }
-        .msg-correct { color: var(--green); font-size: 1.5rem; }
-        
-        .msg-wrong { color: #333; } 
-        .answer-highlight { 
-            color: var(--red); 
-            font-size: 1.5rem; 
-            font-weight: 900;
-            margin: 0 5px;
-            display: inline; /* 인라인으로 변경하여 한 줄 유지 */
+        .btn-confirm { 
+            width: 90px; background: var(--yellow); border-radius: 15px; 
+            font-size: 1.2rem; font-weight: 900; border: none; cursor: pointer; 
         }
 
-        .control-row { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
+        .control-row { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-top: 10px; }
         button.action-btn { border: none; border-radius: 20px; padding: 15px; font-size: 1rem; font-weight: bold; cursor: pointer; }
         .btn-pass { background: var(--gray); color: var(--dark-gray); }
         .btn-stop { background: var(--red); color: white; }
@@ -111,7 +108,7 @@
 <body>
 
 <div class="container">
-    <div class="title">📖 오늘의 속담</div>
+    <div class="title">🎓 오늘의 속담</div>
     
     <div class="dashboard">
         <div style="display: flex; align-items: center; gap: 10px;">
@@ -129,12 +126,12 @@
 
     <div class="quiz-content" id="question">로딩 중...</div>
 
+    <div id="status-msg"></div>
+
     <div class="input-row">
         <input type="text" id="user-input" class="input-box" placeholder="정답 입력" autocomplete="off">
         <button class="btn-confirm" onclick="checkAnswer()">확인</button>
     </div>
-
-    <div id="status-msg"></div>
 
     <div class="control-row">
         <button class="action-btn btn-pass" onclick="nextQuiz()">PASS</button>
@@ -150,6 +147,7 @@
 </div>
 
 <script>
+    // 기존 스크립트 동일 (생략하지 않고 그대로 사용하시면 됩니다)
     let currentIdx = 0, score = 0, timeLeft = 15, maxTime = 15;
     let timerInterval, isPaused = false, isProcessing = false;
     let isMuted = false;
@@ -219,7 +217,7 @@
             }
         } else {
             const highlightedSentence = currentData.q.replace("[  ]", `<span class="answer-highlight">${correctAnswer}</span>`);
-            msg.innerHTML = `❌ ${highlightedSentence}`;
+            msg.innerHTML = highlightedSentence;
             msg.className = "msg-wrong";
             playSnd(sndWrong);
             setTimeout(nextQuiz, 3000);
@@ -258,7 +256,7 @@
                 const msg = document.getElementById('status-msg');
                 const currentData = shuffledData[currentIdx];
                 const highlightedSentence = currentData.q.replace("[  ]", `<span class="answer-highlight">${currentData.a}</span>`);
-                msg.innerHTML = `⏰ 시간 초과! ${highlightedSentence}`;
+                msg.innerHTML = highlightedSentence;
                 msg.className = "msg-wrong";
                 playSnd(sndWrong);
                 setTimeout(nextQuiz, 3000);
