--- a/seating.html
+++ b/seating.html
@@ -2,108 +2,157 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>랜덤 좌석 배치도 - 네온 에디션</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>랜덤 좌석 배치도 - 네온 모바일</title>
     <style>
         :root {
-            --bg-black: #0a0c10;     /* 아주 깊은 블랙 */
-            --neon-mint: #00ffcc;    /* 형광 민트 */
+            --bg-black: #0a0c10;
+            --neon-mint: #00ffcc;
             --mint-glow: rgba(0, 255, 204, 0.4);
-            --panel-bg: #161b22;     /* 설정창 배경 */
-            --seat-empty: #21262d;   /* 빈 좌석 배경 */
+            --panel-bg: #161b22;
+            --seat-empty: #21262d;
         }
 
         body {
             font-family: 'Pretendard', sans-serif;
             background-color: var(--bg-black);
-            color: #ffffff; margin: 0; padding: 10px;
-            display: flex; flex-direction: column; align-items: center;
-            height: 100vh; overflow: hidden;
+            color: #ffffff;
+            margin: 0;
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+            overflow-y: auto; /* 모바일 스크롤 허용 */
+            box-sizing: border-box;
         }
 
-        /* 제목: 네온 발광 효과 */
         h1 {
-            font-size: 1.8rem; margin: 10px 0; 
+            font-size: 1.5rem;
+            margin: 15px 0;
             color: var(--neon-mint);
-            text-shadow: 0 0 10px var(--mint-glow), 0 0 20px var(--mint-glow);
-            letter-spacing: -1px;
+            text-shadow: 0 0 10px var(--mint-glow);
+            text-align: center;
         }
 
-        /* 설정 영역: 다크 패널 */
+        /* 설정 영역: 모바일 대응 레이아웃 */
         .controls {
-            background: var(--panel-bg); padding: 12px 30px; border-radius: 15px;
-            display: flex; gap: 20px; margin-bottom: 20px; align-items: center;
+            background: var(--panel-bg);
+            padding: 15px;
+            border-radius: 15px;
+            display: flex;
+            flex-wrap: wrap; /* 좁으면 아래로 내려가게 */
+            justify-content: center;
+            gap: 12px;
+            margin-bottom: 20px;
+            width: 100%;
+            max-width: 400px;
             border: 1px solid #30363d;
             box-shadow: 0 10px 20px rgba(0,0,0,0.5);
         }
 
-        .input-group { display: flex; align-items: center; gap: 8px; }
-        .input-group label { font-size: 0.9rem; font-weight: bold; color: #8b949e; }
-        
-        input { 
-            padding: 8px; border: 1px solid #484f58; border-radius: 8px; width: 55px; 
-            background: var(--bg-black); color: var(--neon-mint); 
-            font-size: 1.1rem; font-weight: bold; text-align: center; outline: none;
+        .input-group {
+            display: flex;
+            align-items: center;
+            gap: 8px;
         }
-        input:focus { border-color: var(--neon-mint); box-shadow: 0 0 8px var(--mint-glow); }
 
-        /* 시작 버튼: 크고 강렬한 네온 스타일 */
+        .input-group label {
+            font-size: 0.85rem;
+            color: #8b949e;
+            white-space: nowrap;
+        }
+
+        input {
+            padding: 10px;
+            border: 1px solid #484f58;
+            border-radius: 8px;
+            width: 50px;
+            background: var(--bg-black);
+            color: var(--neon-mint);
+            font-size: 1rem;
+            font-weight: bold;
+            text-align: center;
+            outline: none;
+        }
+
         #startBtn {
-            padding: 12px 40px; background: var(--neon-mint); color: #000;
-            border: none; border-radius: 10px; cursor: pointer; 
-            font-size: 1.4rem; font-weight: 900;
-            transition: 0.2s; 
+            width: 100%; /* 모바일에서 클릭하기 쉽게 가로 꽉 차게 */
+            padding: 12px;
+            background: var(--neon-mint);
+            color: #000;
+            border: none;
+            border-radius: 10px;
+            font-size: 1.2rem;
+            font-weight: 900;
             box-shadow: 0 0 15px var(--mint-glow);
-            margin-left: 10px;
+            cursor: pointer;
+            margin-top: 5px;
         }
-        #startBtn:hover { transform: scale(1.05); filter: brightness(1.1); box-shadow: 0 0 25px var(--neon-mint); }
-        #startBtn:active { transform: scale(0.95); }
 
-        /* 칠판: 다크한 느낌의 칠판 */
         .blackboard {
-            width: 300px; height: 40px; 
+            width: 80%;
+            max-width: 300px;
+            height: 35px;
             background: #0d1117;
-            border: 3px solid #30363d; 
+            border: 2px solid #30363d;
             border-radius: 4px;
-            display: flex; align-items: center; justify-content: center;
-            color: #8b949e; font-weight: bold; font-size: 0.8rem;
-            margin-bottom: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #8b949e;
+            font-weight: bold;
+            font-size: 0.75rem;
+            margin-bottom: 20px;
             letter-spacing: 4px;
         }
-        .blackboard::after { content: "SCREEN / FRONT"; }
+        .blackboard::after { content: "SCREEN"; }
 
-        /* 좌석 그리드: 간격 최소화 */
+        /* 좌석 그리드: 모바일 화면 폭에 맞춰 유동적으로 조절 */
         .seat-grid {
-            display: grid; 
-            column-gap: 6px; 
-            row-gap: 10px;
-            justify-content: center;
+            display: grid;
+            gap: 8px; /* 좌석 간격 */
+            width: 100%;
+            max-width: 500px;
+            padding-bottom: 40px;
         }
-
-        /* 2명마다 복도 여백 */
-        .seat-grid > div:nth-child(2n) { margin-right: 30px; }
-        .seat-grid > div:nth-child(2n):last-child { margin-right: 0; }
 
         .seat {
-            width: 68px; height: 75px; background: var(--seat-empty);
-            border: 1px solid #30363d; border-radius: 10px;
-            display: flex; flex-direction: column; align-items: center; justify-content: center;
-            transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            aspect-ratio: 1 / 1.1; /* 모바일에서 정비율 유지 */
+            background: var(--seat-empty);
+            border: 1px solid #30363d;
+            border-radius: 8px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            transition: 0.3s;
         }
 
-        /* 확정된 좌석: 네온 민트 테두리와 밝은 숫자 */
         .seat.revealed {
             background: var(--bg-black);
             border: 2px solid var(--neon-mint);
-            box-shadow: 0 0 15px var(--mint-glow);
+            box-shadow: 0 0 10px var(--mint-glow);
         }
 
-        .seat .label { font-size: 0.6rem; color: #484f58; margin-bottom: 2px; }
-        .seat.revealed .label { color: var(--neon-mint); opacity: 0.7; }
+        .seat .label {
+            font-size: 0.5rem;
+            color: #484f58;
+            margin-bottom: 2px;
+        }
 
-        .number { font-size: 1.7rem; font-weight: 900; color: #484f58; }
-        .seat.revealed .number { color: #fff; text-shadow: 0 0 10px var(--neon-mint); }
+        .number {
+            font-size: 1.2rem;
+            font-weight: 900;
+            color: #484f58;
+        }
 
+        .seat.revealed .number {
+            color: #fff;
+            text-shadow: 0 0 8px var(--neon-mint);
+        }
+
+        /* 애니메이션 효과 */
         .shaking { animation: shake 0.1s infinite; }
         @keyframes shake {
             0% { transform: translate(1px, 0); }
@@ -114,16 +163,16 @@
 </head>
 <body>
 
-    <h1>✨ 랜덤 좌석 배치도</h1>
+    <h1>✨ 랜덤 좌석 배치</h1>
 
     <div class="controls">
         <div class="input-group">
             <label>총원</label>
-            <input type="number" id="total" value="24">
+            <input type="number" id="total" value="24" inputmode="numeric">
         </div>
         <div class="input-group">
             <label>가로줄</label>
-            <input type="number" id="cols" value="6">
+            <input type="number" id="cols" value="6" inputmode="numeric">
         </div>
         <button id="startBtn" onclick="startShuffle()">시작! 🎲</button>
     </div>
@@ -138,7 +187,10 @@
             const cols = parseInt(document.getElementById('cols').value);
             const grid = document.getElementById('seatGrid');
             
+            if (!total || !cols) return;
+
             grid.innerHTML = '';
+            // 가로줄 수에 맞춰 그리드 생성
             grid.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;
 
             let nums = Array.from({length: total}, (_, i) => i + 1);
@@ -155,7 +207,7 @@
 
                 setTimeout(() => {
                     revealSeat(seat, num);
-                }, 400 + (index * 70)); 
+                }, 200 + (index * 50)); // 모바일은 조금 더 빠르게 진행
             });
         }
 
@@ -165,16 +217,16 @@
             const rolling = setInterval(() => {
                 numDisplay.innerText = Math.floor(Math.random() * 30) + 1;
                 numDisplay.style.color = 'var(--neon-mint)';
-                if (count++ > 7) {
+                if (count++ > 5) {
                     clearInterval(rolling);
                     numDisplay.innerText = finalNum;
                     numDisplay.style.color = '#fff';
                     seatElement.classList.remove('shaking');
                     seatElement.classList.add('revealed');
-                    seatElement.style.transform = 'scale(1.15)';
-                    setTimeout(() => seatElement.style.transform = 'scale(1)', 150);
+                    seatElement.style.transform = 'scale(1.1)';
+                    setTimeout(() => seatElement.style.transform = 'scale(1)', 100);
                 }
-            }, 45);
+            }, 50);
         }
     </script>
 </body>
