--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <h1>오늘의 놀거리</h1>
 
     <div class="grid-container">
-        <a href="english.html" class="menu-button">
+        <a href="study.html" class="menu-button">
             <div class="icon">🔤</div>
             <span>영어단어</span>
         </a>
