--- a/nonsense.html
+++ b/nonsense.html
@@ -243,7 +243,7 @@
             if (isPaused) return;
             timeLeft -= 0.1;
             updateTimerUI();
-            if (timeLeft > 0 && timeLeft <= 3 && Math.abs(timeLeft % 1) < 0.1) playSnd(sndTick);
+            if (timeLeft > 0 && Math.abs(timeLeft % 1) < 0.1) playSnd(sndTick);
             if (timeLeft <= 0) handleWrongAnswer();
         }, 100);
     }
