--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
 
-    <h1>오늘의 놀거리</h1>
+    <h1>🥳오늘의 놀거리🎉</h1>
 
     <div class="grid-container">
         <a href="study.html" class="menu-button">
@@ -97,11 +97,23 @@
         </a>
         <a href="proverb.html" class="menu-button">
             <div class="icon">📜</div>
-            <span>속담퀴즈</span>
+            <span>속담 퀴즈</span>
         </a>
         <a href="nonsense.html" class="menu-button">
             <div class="icon">😆</div>
-            <span>넌센스</span>
+            <span>넌센스 퀴즈</span>
+        </a>
+	<a href="sense.html" class="menu-button">
+            <div class="icon">🌻</div>
+            <span>상식 퀴즈</span>
+        </a>
+	<a href="history_kr.html" class="menu-button">
+            <div class="icon">📚</div>
+            <span>한국사 퀴즈</span>
+        </a>
+	<a href="world_history.html" class="menu-button">
+            <div class="icon">🌍</div>
+            <span>세계사 퀴즈</span>
         </a>
         <a href="rhythm.html" class="menu-button">
             <div class="icon">🎶</div>
