--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
             <div class="icon">🌍</div>
             <span>세계사 퀴즈</span>
         </a>
+        <a href="2048.html" class="menu-button">
+            <div class="icon">🧱</div>
+            <span>2048</span>
+        </a>
         <a href="rhythm.html" class="menu-button">
             <div class="icon">🎶</div>
             <span>리듬게임</span>
