--- a/2048.html
+++ b/2048.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>🧱 2048 타일 게임</title>
+    <title>2048 타일 게임</title>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -20,33 +20,21 @@
             overflow: hidden; touch-action: none;
         }
 
-        h1 { color: #5d544b; margin: 5px 0; font-size: 2.2rem; text-shadow: 2px 2px #eee; }
+        h1 { color: #5d544b; margin: 15px 0 10px 0; font-size: 2.2rem; text-shadow: 1px 1px #eee; }
 
-        /* 상단 레이아웃 수정 */
         .top-bar {
             width: 90vw; max-width: 400px;
-            display: flex; justify-content: space-between; align-items: center;
-            margin-bottom: 10px;
+            display: flex; justify-content: flex-end; align-items: center;
+            margin-bottom: 15px;
         }
 
-        /* 왼쪽: 사운드 컨트롤 */
-        .sound-control {
-            background: white; border: 3px solid #bbaa9f; border-radius: 15px;
-            padding: 8px 12px; cursor: pointer; display: flex; align-items: center;
-            gap: 5px; box-shadow: 0 4px #bbaa9f; transition: 0.1s;
-        }
-        .sound-control:active { transform: translateY(2px); box-shadow: 0 2px #bbaa9f; }
-        .sound-icon { font-size: 1.2rem; }
-
-        /* 오른쪽: 점수판 (가로로 더 넓게) */
         .score-box { 
-            background: #bbaa9f; color: white; padding: 5px 30px; 
+            background: #bbaa9f; color: white; padding: 8px 30px; 
             border-radius: 15px; text-align: center; box-shadow: 0 4px #8d7d73;
             min-width: 120px;
         }
         #score { font-size: 1.8rem; font-weight: bold; }
 
-        /* 게임판 */
         #grid-container {
             position: relative; width: 90vw; height: 90vw; max-width: 400px; max-height: 400px;
             background: var(--grid-bg); padding: 12px; border-radius: 15px; 
@@ -61,10 +49,11 @@
         .cell { 
             background: rgba(238, 228, 218, 0.5); border-radius: 12px;
             display: flex; align-items: center; justify-content: center; 
-            font-size: 2rem; font-weight: bold; color: var(--text-color);
-            transition: all 0.1s;
+            font-size: 2.2rem; font-weight: bold; color: var(--text-color);
+            transition: transform 0.1s, background 0.1s;
         }
 
+        /* 숫자별 색상 디자인 */
         .n-2 { background: #eee4da; box-shadow: 0 4px #d2c5b7; }
         .n-4 { background: #ede0c8; box-shadow: 0 4px #d0c2a9; }
         .n-8 { background: #f2b179; color: white; box-shadow: 0 4px #d69a66; }
@@ -90,14 +79,9 @@
 </head>
 <body>
 
-    <h1>2048 타일 게임</h1>
+    <h1>🧩 2048 타일 게임</h1>
     
     <div class="top-bar">
-        <div class="sound-control" id="sound-toggle">
-            <span class="sound-icon" id="sound-icon">🔊</span>
-            <span style="color: #776e65;">소리 켬</span>
-        </div>
-
         <div class="score-box">
             <div style="font-size: 0.8rem; opacity: 0.9;">SCORE</div>
             <div id="score">0</div>
@@ -112,37 +96,19 @@
         </div>
     </div>
 
-    <audio id="popSound">
-        <source src="https://assets.mixkit.co/active_storage/sfx/2571/2571-preview.mp3" type="audio/mpeg">
-    </audio>
-
     <script>
         let board = Array(4).fill().map(() => Array(4).fill(0));
         let score = 0;
-        let soundEnabled = true;
 
         const grid = document.getElementById('grid');
         const scoreDisplay = document.getElementById('score');
         const overlay = document.getElementById('overlay');
-        const popSound = document.getElementById('popSound');
-        const soundToggle = document.getElementById('sound-toggle');
-        const soundIcon = document.getElementById('sound-icon');
-        const soundText = soundToggle.querySelector('span:last-child');
-
-        // 사운드 토글 기능
-        soundToggle.onclick = () => {
-            soundEnabled = !soundEnabled;
-            soundIcon.innerText = soundEnabled ? "🔊" : "🔇";
-            soundText.innerText = soundEnabled ? "소리 켬" : "소리 끔";
-            // 브라우저 오디오 제한 해제를 위해 무음 재생 시도
-            if(soundEnabled) popSound.play().catch(()=>{});
-        };
 
         function init() {
             board = Array(4).fill().map(() => Array(4).fill(0));
             score = 0;
             overlay.style.display = 'none';
-            for(let i=0; i<4; i++) generate(); // 4개로 시작
+            for(let i=0; i<4; i++) generate(); // 숫자 4개로 시작
             updateBoard();
         }
 
@@ -171,18 +137,12 @@
 
         function slide(row) {
             let filtered = row.filter(x => x > 0);
-            let mergedInThisRow = false;
             for (let i = 0; i < filtered.length - 1; i++) {
                 if (filtered[i] === filtered[i+1]) {
                     filtered[i] *= 2;
                     score += filtered[i];
                     filtered[i+1] = 0;
-                    mergedInThisRow = true;
                 }
-            }
-            if(mergedInThisRow && soundEnabled) {
-                popSound.currentTime = 0;
-                popSound.play().catch(()=>{});
             }
             filtered = filtered.filter(x => x > 0);
             while (filtered.length < 4) filtered.push(0);
@@ -225,19 +185,24 @@
         }
 
         window.onkeydown = (e) => {
-            if (e.key === 'ArrowUp') move('up');
-            if (e.key === 'ArrowDown') move('down');
-            if (e.key === 'ArrowLeft') move('left');
-            if (e.key === 'ArrowRight') move('right');
+            if (["ArrowUp","ArrowDown","ArrowLeft","ArrowRight"].includes(e.key)) {
+                e.preventDefault();
+                move(e.key.replace("Arrow","").toLowerCase());
+            }
         };
 
-        // 스와이프 기능
+        // 스와이프(터치) 컨트롤
         let startX, startY;
-        document.addEventListener('touchstart', e => { startX = e.touches[0].clientX; startY = e.touches[0].clientY; });
+        document.addEventListener('touchstart', e => { 
+            startX = e.touches[0].clientX; 
+            startY = e.touches[0].clientY; 
+        }, {passive: false});
+
         document.addEventListener('touchend', e => {
             if (!startX || !startY) return;
             const diffX = e.changedTouches[0].clientX - startX;
             const diffY = e.changedTouches[0].clientY - startY;
+
             if (Math.abs(diffX) > Math.abs(diffY)) {
                 if (Math.abs(diffX) > 30) move(diffX > 0 ? 'right' : 'left');
             } else {
