--- a/index.html
+++ b/index.html
@@ -116,8 +116,12 @@
             <span>세계사 퀴즈</span>
         </a>
         <a href="2048.html" class="menu-button">
-            <div class="icon">🧱</div>
+            <div class="icon">🧩</div>
             <span>2048</span>
+        </a>
+        <a href="worldle.html" class="menu-button">
+            <div class="icon">🎈</div>
+            <span>단어 맞추기</span>
         </a>
         <a href="rhythm.html" class="menu-button">
             <div class="icon">🎶</div>
