--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
             <div class="icon">🎈</div>
             <span>단어 맞추기</span>
         </a>
+        <a href="bird.html" class="menu-button">
+            <div class="icon">🐤</div>
+            <span>삐약이</span>
+        </a>
         <a href="rhythm.html" class="menu-button">
             <div class="icon">🎶</div>
             <span>리듬게임</span>
