--- a/bird.html
+++ b/bird.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 
-    <h1>🚀 날아라 삐약이! ✨</h1>
+    <h1>🐤 날아라 삐약이! 🚀</h1>
 
     <div class="status-bar">
         <div class="score-info">
