--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
             <div class="icon">🐤</div>
             <span>삐약이</span>
         </a>
+        <a href="dalgona.html" class="menu-button">
+            <div class="icon"></div>
+            <span>✨달고나</span>
+        </a>
         <a href="rhythm.html" class="menu-button">
             <div class="icon">🎶</div>
             <span>리듬게임</span>
