--- a/index.html
+++ b/index.html
@@ -156,7 +156,14 @@
             <div class="icon">🎰</div>
             <span>로또 번호</span>
         </a>
+        <a href="metronome.html" class="menu-button">
+            <div class="icon"></div>
+            <span>👏메트로놈</span>
+        </a>
+        <a href="piano.html" class="menu-button">
+            <div class="icon"></div>
+            <span>🎹피아노</span>
+        </a>
     </div>
-
 </body>
 </html>
